8-windows/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iis-ingress
  labels:
    scenario: "8"
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: aks.benco.io
    http:
      paths:
      - path: /iis
        backend:
          serviceName: iis-svc
          servicePort: 80
